LabSoaService2/src/main/java/com/example/labsoaservice2/error/model/ErrorType.java
package com.example.labsoaservice2.error.model;

public enum ErrorType {
    APP,
    DATA_BASE
}
